...
                android:gravity="center"
                android:text="Title"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Title_A"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Title_A"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Title_B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Title_B"
                android:textAlignment="center" />
...
                android:gravity="center"
                android:text="Company"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Company_A"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Company_A"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Company_B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Company_B"
                android:textAlignment="center" />
...
                android:gravity="center"
                android:text="Location"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Location_A"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Location_A"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Location_B"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Location_B"
                android:textAlignment="center" />
...
                android:gravity="center"
                android:text="Yearly Salary"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/YearlySalary_A"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="YearlySalary_A"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/YearlySalary_B"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="YearlySalary_B"
                android:textAlignment="center" />
...
                android:gravity="center"
                android:text="Training and Development Fund"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Fund_A"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Fund_A"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/Fund_B"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Fund_B"
                android:textAlignment="center" />
...
                android:gravity="center"
                android:text="Leave Time"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/LeaveTimeA"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="LeaveTime_A"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/LeaveTimeB"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="LeaveTime_B"
                android:textAlignment="center" />
...
                android:gravity="center"
                android:text="Telework Days per Week"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TeleworkDays_A"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TeleworkDays_A"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/TeleworkDays_B"
                android:layout_width="68dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TeleworkDays_B"
                android:textAlignment="center" />
...
                android:id="@+id/comparisonTableAnotherComparison_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Another Comparison" />

            <Button
                android:id="@+id/comparisonTableMainMenu_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back to Main Menu" />
        </LinearLayout>


...
