...
                android:gravity="center"
                android:text="Title"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_Title_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName" />
...
                android:gravity="center"
                android:text="Company"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_Company_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName" />
...
                android:gravity="center"
                android:text="City"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_City_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName" />
...
                android:gravity="center"
                android:text="State"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_State_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName" />
...
                android:gravity="center"
                android:text="Living Cost"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_Cost_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="number" />
...
                android:gravity="center"
                android:text="Yearly Salary"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_Salary_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="number" />
...
                android:gravity="center"
                android:text="Yearly Bonus"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_Bonus_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="number" />
...
                android:gravity="center"
                android:text="Training and Development Fund"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_Fund_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="number" />
...
                android:gravity="center"
                android:text="Leave Time"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_LeaveTime_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="number" />
...
                android:gravity="center"
                android:text="Telework Days per Week"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Edit_TeleworkDays_CurJob"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="number" />
...
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/saveButton_curJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save and Return To Main Menu" />

            <Button
                android:id="@+id/cancelButton_curJob"
...
