...
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputYearlySalarySeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

...
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputYearlyBonusSeekbar"
                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

...
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputTDFSeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

...
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputLeaveTimeSeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

...
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputTeleworkDaysSeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

...
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/saveButton_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save and Return To Menu" />

            <Button
                android:id="@+id/cancelButton_Settings"
...
